--- a/index.html
+++ b/index.html
@@ -4,11 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./index.css" />
+    <link rel="icon" href="./favicon.svg" />
     <title>Works | Description</title>
   </head>
   <body>
-    <div>
-
+    <!-- Tasks -->
+    <div class="work" id="tasks">
+      <h1>TASKS</h1>
+      <p>
+        This project is a website with an administrator and a number of users.
+        The administrator distributes tasks to his users and has the authority
+        to do anything such as deleting, modifying, and creating tasks. On the
+        user page, he only has the authority to click on “Complete the task” to
+        inform the administrator that this user has completed his task. It is
+        also possible to transfer Language from English to Arabic and vice versa
+        . You can also create a new user if you do not have an account .
+      </p>
     </div>
+    <br />
+    <!-- News -->
+    <div class="work" id="news">
+      <h1>NEWS</h1>
+      <p>
+        This project is a website that brings breaking news and business news.
+        You can also see all the sources from which the news comes, and you can
+        also see the weather, date and time through it.
+      </p>
+    </div>
+    <br />
+    <!-- Softy Pinko -->
+    <div class="work" id="softy">
+      <h1>SOFTY PINKO</h1>
+      <p>This project is only for design ,html css and bootsrap .</p>
+    </div>
+    <br />
+    <!-- Facebook -->
+    <div class="work" id="facebook">
+      <h1>FACEBOOK</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. In corporis
+        eligendi aliquam vero a consequuntur, aut perspiciatis ullam ipsam!
+        Voluptates exercitationem iure est, possimus delectus velit expedita ex
+        corrupti iste.
+      </p>
+    </div>
+    <br />
+    <!-- X and O -->
+    <div class="work" id="xo">
+      <h1>X / O</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. In corporis
+        eligendi aliquam vero a consequuntur, aut perspiciatis ullam ipsam!
+        Voluptates exercitationem iure est, possimus delectus velit expedita ex
+        corrupti iste.
+      </p>
+    </div>
+    <br />
   </body>
 </html>
