--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <div class="work" id="tasks">
       <h1>TASKS</h1>
       <p>
+        Admin : " feras@admin.com " <br />password : " 12345 "<br />
+        this password same for admin and all users .
+      </p>
+      <hr />
+      <p>
         This project is a website with an administrator and a number of users.
         The administrator distributes tasks to his users and has the authority
         to do anything such as deleting, modifying, and creating tasks. On the
@@ -20,44 +25,43 @@
         also possible to transfer Language from English to Arabic and vice versa
         . You can also create a new user if you do not have an account .
       </p>
+      <h5>Techniques used ( NextJS, Typescript , Material-UI )</h5>
     </div>
     <br />
+
     <!-- News -->
     <div class="work" id="news">
       <h1>NEWS</h1>
       <p>
-        This project is a website that brings breaking news and business news.
-        You can also see all the sources from which the news comes, and you can
-        also see the weather, date and time through it.
+        This project is a website that brings breaking news and sports leagues
+        details worldwide. You can also see more sources and channels, and you
+        can also see the weather, date and time through it.
       </p>
+      <h5>
+        Techniques used ( ReactJS, Javascript , React-Bootstrap, Bootstrap )
+      </h5>
     </div>
+
     <br />
     <!-- Softy Pinko -->
     <div class="work" id="softy">
       <h1>SOFTY PINKO</h1>
       <p>This project is only for design ,html css and bootsrap .</p>
+      <h5>Techniques used ( HTML, CSS , Bootstrap )</h5>
     </div>
     <br />
     <!-- Facebook -->
     <div class="work" id="facebook">
       <h1>FACEBOOK</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. In corporis
-        eligendi aliquam vero a consequuntur, aut perspiciatis ullam ipsam!
-        Voluptates exercitationem iure est, possimus delectus velit expedita ex
-        corrupti iste.
-      </p>
+      <p>This project is similar to Facebook website .</p>
+      <h5>Techniques used ( ReactJS, Typescript , TailwindCSS )</h5>
     </div>
     <br />
     <!-- X and O -->
     <div class="work" id="xo">
       <h1>X / O</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. In corporis
-        eligendi aliquam vero a consequuntur, aut perspiciatis ullam ipsam!
-        Voluptates exercitationem iure est, possimus delectus velit expedita ex
-        corrupti iste.
-      </p>
+      <p>This Project is X and O popular game</p>
+      <h5>Techniques used ( HTML, CSS , Javascript )</h5>
     </div>
     <br />
   </body>
