--- a/index.html
+++ b/index.html
@@ -50,13 +50,19 @@
       <h5>Techniques used ( HTML, CSS , Bootstrap )</h5>
     </div>
     <br />
+
     <!-- Facebook -->
     <div class="work" id="facebook">
       <h1>FACEBOOK</h1>
-      <p>This project is similar to Facebook website .</p>
+      <p>
+        This project is one of my favorite projects I create it exactly like
+        Facebook website I dealing with posts, stories, interactions ,
+        animtations .
+      </p>
       <h5>Techniques used ( ReactJS, Typescript , TailwindCSS )</h5>
     </div>
     <br />
+
     <!-- X and O -->
     <div class="work" id="xo">
       <h1>X / O</h1>
