desc youtube link

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
         also possible to transfer Language from English to Arabic and vice versa
         . You can also create a new user if you do not have an account .
       </p>
+      <p>
+        I published this project on YouTube, you can watch it for more
+        explanation.
+      </p>
+      <a
+        href="https://www.youtube.com/watch?v=YelO1KgUzsY&t=50s"
+        target="_blank"
+      >
+        https://www.youtube.com/watch?v=YelO1KgUzsY&t=50s
+      </a>
       <h5>Techniques used ( NextJS, Typescript , Material-UI )</h5>
     </div>
     <br />
