add water animation

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       >
         https://www.youtube.com/watch?v=YelO1KgUzsY&t=50s
       </a>
-      <h5>Techniques used ( NextJS, Typescript , Material-UI )</h5>
+      <h5>Technologies used ( NextJS, Typescript , Material-UI )</h5>
     </div>
     <br />
 
@@ -48,7 +48,7 @@
         can also see the weather, date and time through it.
       </p>
       <h5>
-        Techniques used ( ReactJS, Javascript , React-Bootstrap, Bootstrap )
+        Technologies used ( ReactJS, Javascript , React-Bootstrap, Bootstrap )
       </h5>
     </div>
 
@@ -61,7 +61,7 @@
         matches for Alkarama and also gets all the news about this. club like
         next and previous matches and all leagues that Alkarama play in .
       </p>
-      <h5>Techniques used ( React, Typescript, Bootstrap, SCSS )</h5>
+      <h5>Technologies used ( React, Typescript, Bootstrap, SCSS )</h5>
     </div>
     <br />
     <br />
@@ -69,7 +69,7 @@
     <div class="work" id="softy">
       <h1>SOFTY PINKO</h1>
       <p>This project is only for design ,html css and bootsrap .</p>
-      <h5>Techniques used ( HTML, CSS , Bootstrap )</h5>
+      <h5>Technologies used ( HTML, CSS , Bootstrap )</h5>
     </div>
     <br />
 
@@ -81,7 +81,7 @@
         Facebook website I dealing with posts, stories, interactions ,
         animtations .
       </p>
-      <h5>Techniques used ( ReactJS, Typescript , TailwindCSS )</h5>
+      <h5>Technologies used ( React, Typescript , TailwindCSS, SCSS )</h5>
     </div>
     <br />
 
@@ -89,7 +89,18 @@
     <div class="work" id="xo">
       <h1>X / O</h1>
       <p>This Project is X and O popular game</p>
-      <h5>Techniques used ( HTML, CSS , Javascript )</h5>
+      <h5>Technologies used ( React, CSS , Javascript )</h5>
+    </div>
+    <br />
+
+    <!-- Water Animation -->
+    <div class="work" id="animationWater">
+      <h1>X / O</h1>
+      <p>
+        This project contains my first experience working with animation, and I
+        hope you like it.
+      </p>
+      <h5>Technologies used ( React, SCSS , Javascript )</h5>
     </div>
     <br />
   </body>
