--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
 
     <br />
-    <!-- Softy Pinko -->
+    <!-- Alkarama -->
     <div class="work" id="alkarama">
       <h1>Alkarama_Club</h1>
       <p>
@@ -95,12 +95,25 @@
 
     <!-- Water Animation -->
     <div class="work" id="animationWater">
-      <h1>X / O</h1>
+      <h1>Water Animation</h1>
       <p>
         This project contains my first experience working with animation, and I
         hope you like it.
       </p>
       <h5>Technologies used ( React, SCSS , Javascript )</h5>
+    </div>
+    <br />
+
+    <!-- Cars Game -->
+    <div class="work" id="cars-game">
+      <h1>Cars_Game</h1>
+      <p>
+        This project is a car game. You can control your car by clicking on the
+        right and left arrows, and you should not collide with cars to avoid
+        losing the game, and your top score will be saved; you won the game when
+        counter arrive to 30.
+      </p>
+      <h5>Technologies used ( React, SCSS , typescript )</h5>
     </div>
     <br />
   </body>
