--- a/index.html
+++ b/index.html
@@ -116,5 +116,18 @@
       <h5>Technologies used ( React, SCSS , typescript )</h5>
     </div>
     <br />
+
+    <!-- Resturant_Food Game -->
+    <div class="work" id="Resturant">
+      <h1>Resturant_Food</h1>
+      <p>
+        This project is a restaurant food cashier programme; you can add all
+        foods. to bill and finally print the bill that contains all prices and
+        total price, also you can add your bills to store cash, and thats for
+        reviewing all money at the end of the day.
+      </p>
+      <h5>Technologies used ( React, SCSS , typescript )</h5>
+    </div>
+    <br />
   </body>
 </html>
