--- a/index.html
+++ b/index.html
@@ -129,5 +129,16 @@
       <h5>Technologies used ( React, SCSS , typescript )</h5>
     </div>
     <br />
+
+    <!-- Calculator Game -->
+    <div class="work" id="Calculator">
+      <h1>Calculator</h1>
+      <p>
+        This project is a calculator that you can use to handle a lot of math
+        operations.
+      </p>
+      <h5>Technologies used ( React, SCSS , javascript )</h5>
+    </div>
+    <br />
   </body>
 </html>
