--- a/index.html
+++ b/index.html
@@ -140,5 +140,17 @@
       <h5>Technologies used ( React, SCSS , javascript )</h5>
     </div>
     <br />
+
+    <!-- Products Game -->
+    <div class="work" id="Products">
+      <h1>Products</h1>
+      <p>
+        This project is a mini web store with features including displaying all
+        products, filtering them using various search methods, toggling between
+        night mode and day mode, login, sign up, and animation.
+      </p>
+      <h5>Technologies used ( React, TailwindCss, SCSS , Typescript )</h5>
+    </div>
+    <br />
   </body>
 </html>
