--- a/index.html
+++ b/index.html
@@ -152,5 +152,20 @@
       <h5>Technologies used ( React, MaterialUI, SCSS , Typescript )</h5>
     </div>
     <br />
+
+    <!-- Chat App -->
+    <div class="work" id="ChatApp">
+      <h1>Chat App</h1>
+      <p>
+        This project is for chatting with registered users. You can start by
+        creating a new account and chatting with all the people who are
+        registered on this website.
+      </p>
+      <h5>
+        Technologies used ( React, MaterialUI, SCSS , Typescript , expressJS,
+        MongoDB )
+      </h5>
+    </div>
+    <br />
   </body>
 </html>
