--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
     <div class="work" id="ChatApp">
       <h1>Chat App</h1>
       <p>
-        This project is for chatting with registered users. You can start by
-        creating a new account and chatting with all the people who are
-        registered on this website.
+        This project allows users to chat with each other. You can start by
+        creating a new account and chatting with all the registered users on
+        this website. You can also make video calls and voice calls.
+        Additionally, you can edit your profile data and edit sent messages.
       </p>
       <h5>
         Technologies used ( React, MaterialUI, SCSS , Typescript , expressJS,
