--- a/index.html
+++ b/index.html
@@ -168,5 +168,16 @@
       </h5>
     </div>
     <br />
+
+    <!-- Chat App -->
+    <div class="work" id="chess">
+      <h1>Chess</h1>
+      <p>
+        This chess game includes all standard chess rules, ensuring a unique and
+        enjoyable experience for players.
+      </p>
+      <h5>Technologies used ( React, TailwindCss, SCSS , Typescript )</h5>
+    </div>
+    <br />
   </body>
 </html>
