add-our-website

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </div>
     <br />
 
-    <!-- Chat App -->
+    <!-- Chess -->
     <div class="work" id="chess">
       <h1>Chess</h1>
       <p>
@@ -177,6 +177,17 @@
         enjoyable experience for players.
       </p>
       <h5>Technologies used ( React, TailwindCss, SCSS , Typescript )</h5>
+    </div>
+    <br />
+
+    <!-- Our website -->
+    <div class="work" id="ourwebsite">
+      <h1>OUr Website</h1>
+      <p>
+        This project serves as a landing page example for a commercial website,
+        with fully responsive.
+      </p>
+      <h5>Technologies used ( NextJS, Material-UI, CSS , Typescript )</h5>
     </div>
     <br />
   </body>
