--- a/index.html
+++ b/index.html
@@ -182,12 +182,32 @@
 
     <!-- Our website -->
     <div class="work" id="ourwebsite">
-      <h1>OUr Website</h1>
+      <h1>Our Website</h1>
       <p>
         This project serves as a landing page example for a commercial website,
         with fully responsive.
       </p>
       <h5>Technologies used ( NextJS, Material-UI, CSS , Typescript )</h5>
+    </div>
+    <br />
+
+    <!-- Hostin -->
+    <div class="work" id="hostin">
+      <h1>Hostin</h1>
+      <p>
+        This is Lnading page hostin
+      </p>
+      <h5>Technologies used ( NextJS, MaterialUI, SCSS , Typescript )</h5>
+    </div>
+    <br />
+
+    <!-- The Platform  -->
+    <div class="work" id="theplatform">
+      <h1>The Platform</h1>
+      <p>
+        This is a platform for students, mentors and entrepreuners 
+      </p>
+      <h5>Technologies used ( NextJS, MaterialUI, SCSS , Typescript )</h5>
     </div>
     <br />
   </body>
