--- a/index.html
+++ b/index.html
@@ -29,11 +29,8 @@
         I published this project on YouTube, you can watch it for more
         explanation.
       </p>
-      <a
-        href="https://www.youtube.com/watch?v=YelO1KgUzsY&t=50s"
-        target="_blank"
-      >
-        https://www.youtube.com/watch?v=YelO1KgUzsY&t=50s
+      <a href="https://www.youtube.com/watch?v=YelO1KgUzsY" target="_blank">
+        youtube.com/watch?v=YelO1KgUzsY
       </a>
       <h5>Technologies used ( NextJS, Typescript , Material-UI )</h5>
     </div>
@@ -105,19 +102,6 @@
     </div>
     <br />
 
-    <!-- Resturant_Food Game -->
-    <div class="work" id="Resturant">
-      <h1>Resturant_Food</h1>
-      <p>
-        This project is a restaurant food cashier programme; you can add all
-        foods. to bill and finally print the bill that contains all prices and
-        total price, also you can add your bills to store cash, and thats for
-        reviewing all money at the end of the day.
-      </p>
-      <h5>Technologies used ( React, SCSS , typescript )</h5>
-    </div>
-    <br />
-
     <!-- Calculator Game -->
     <div class="work" id="Calculator">
       <h1>Calculator</h1>
@@ -141,7 +125,7 @@
     </div>
     <br />
 
-    <!-- Products Game -->
+    <!-- Downloader -->
     <div class="work" id="Downloader">
       <h1>Downloader</h1>
       <p>
@@ -191,11 +175,30 @@
     </div>
     <br />
 
+    <!-- Resturant -->
+    <div class="work" id="Resturant">
+      <h1>Resturant</h1>
+      <p>
+        • Developed a full-stack web application for restaurant cash
+        management.<br /><br />
+        • Key responsibilities included adding and printing bills with review
+        functionality, managing items with images for a user-friendly
+        experience, clearing cash transactions, and implementing a
+        language-switching feature.
+      </p>
+      <h5>
+        Technologies used ( NextJS, NextJS_APIs, MongoDB, typescript, SCSS,
+        Material-UI )
+      </h5>
+    </div>
+    <br />
+
     <!-- Hostin -->
     <div class="work" id="hostin">
       <h1>Hostin</h1>
       <p>
-        This is Lnading page hostin
+        This is a landing page developed by Merwas, featuring an amazing style
+        with animations and sliders.
       </p>
       <h5>Technologies used ( NextJS, MaterialUI, SCSS , Typescript )</h5>
     </div>
@@ -205,8 +208,19 @@
     <div class="work" id="theplatform">
       <h1>The Platform</h1>
       <p>
-        This is a platform for students, mentors and entrepreuners 
+        • Developed a platform with Merwas Company for students, mentors and
+        entrepreneurs <br /><br />
+        • Key responsibilities included ensuring responsiveness across all
+        screen sizes, user authentication (login and registration), language
+        switching, and booking facilities, events, and workshops.
       </p>
+      <p>
+        I published this project on YouTube, you can watch it for more
+        explanation.
+      </p>
+      <a href="https://youtu.be/d-0YsTy4Yiw" target="_blank">
+        youtu.be/d-0YsTy4Yiw
+      </a>
       <h5>Technologies used ( NextJS, MaterialUI, SCSS , Typescript )</h5>
     </div>
     <br />
