--- a/index.html
+++ b/index.html
@@ -221,7 +221,17 @@
       <a href="https://youtu.be/d-0YsTy4Yiw" target="_blank">
         youtu.be/d-0YsTy4Yiw
       </a>
-      <h5>Technologies used ( NextJS, MaterialUI, SCSS , Typescript )</h5>
+      <h5>Technologies used ( NextJS, MaterialUI, SCSS, Typescript )</h5>
+    </div>
+    <br />
+
+    <!-- Table Reservation  -->
+    <div class="work" id="tableReservation">
+      <h1>Table Reservation</h1>
+      <p>
+        This project is a table reservation service designed for clients, offering a variety of table types such as VIP, Family, and Personal. You can easily choose your preferred date and time by selecting the month, day, start time, and end time.
+      </p>
+      <h5>Technologies used ( NextJS, NextJS_APIs, MongoDB, MaterialUI, SCSS, Typescript )</h5>
     </div>
     <br />
   </body>
