--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         products, filtering them using various search methods, toggling between
         night mode and day mode, login, sign up, and animation.
       </p>
-      <h5>Technologies used ( React, TailwindCss, SCSS , Typescript )</h5>
+      <h5>Technologies used ( React, TailwindCSS, SCSS , Typescript )</h5>
     </div>
     <br />
 
@@ -175,6 +175,14 @@
     </div>
     <br />
 
+    <!-- Facebook -->
+    <div class="work" id="facebook">
+      <h1>Facebook</h1>
+      <p>I created this project to resemble the Facebook website.</p>
+      <h5>Technologies used ( ReactJS, TailwindCSS, SCSS, Typescript, Redux )</h5>
+    </div>
+    <br />
+
     <!-- Resturant -->
     <div class="work" id="Resturant">
       <h1>Resturant</h1>
@@ -197,8 +205,8 @@
     <div class="work" id="hostin">
       <h1>Hostin</h1>
       <p>
-        This is a landing page developed by Merwas, featuring an amazing style
-        with animations and sliders.
+        This is a landing page developed by Merwas company, featuring an amazing
+        style with animations and sliders.
       </p>
       <h5>Technologies used ( NextJS, MaterialUI, SCSS , Typescript )</h5>
     </div>
@@ -229,9 +237,15 @@
     <div class="work" id="tableReservation">
       <h1>Table Reservation</h1>
       <p>
-        This project is a table reservation service designed for clients, offering a variety of table types such as VIP, Family, and Personal. You can easily choose your preferred date and time by selecting the month, day, start time, and end time.
+        This project is a table reservation service designed for clients,
+        offering a variety of table types such as VIP, Family, and Personal. You
+        can easily choose your preferred date and time by selecting the month,
+        day, start time, and end time.
       </p>
-      <h5>Technologies used ( NextJS, NextJS_APIs, MongoDB, MaterialUI, SCSS, Typescript )</h5>
+      <h5>
+        Technologies used ( NextJS, NextJS_APIs, MongoDB, MaterialUI, SCSS,
+        Typescript )
+      </h5>
     </div>
     <br />
   </body>
